--- a/migrant-student-education.tex
+++ b/migrant-student-education.tex
@@ -150,8 +150,8 @@
 
 
 
-\title{Education Funding Inequality and Academic Performance Gap between
-Migrant and Local Students in China}
+\title{Education Funding Inequality and Academic Performance Disparity
+between Migrant and Local Students in China}
 
 
 \shorttitle{D2MR Final Project}
@@ -316,7 +316,7 @@ underachievement. Li (\citeproc{ref-liDataAnalysisCurrent2018}{2018})
 indicated that central governments have less educational funding
 distributed to provinces containing more migrant population due to
 fiscal decentralization. On the other hand, the \emph{Hukou} policy
-\footnote{The Hukou Policy is a population management policy that
+\footnote{The \emph{Hukou} Policy is a population management policy that
   restraints non-local residents from/uplifts the threshold of enjoying
   the same social, medical, and educational public services as local
   households do.} has a history of limiting policy supports for internal
@@ -328,15 +328,16 @@ However, both perspectives have failed to identify an integrated
 framework: if we can discover the impact of differentiated financial
 supports and per student funding appropriated to two groups of students,
 then it is plausible to assume that fiscal decentralization is producing
-local-migrant educational inequity through the lens of Hukou status.
+local-migrant educational inequity through the lens of \emph{Hukou}
+status.
 
 In this study, I seek to understand \textbf{how governments'
 differentiated provision of education fundings affects the academic
-performance gap between migrant students and local students in China} .
-My hypothesis is \textbf{when the government provides migrant students
-with limited fundings, and less-supportive charging standards and
-subsidy policies, the academic performance gap between the two groups of
-students is likely to widen}.
+performance disparity between migrant students and local students in
+China} . My hypothesis is \textbf{when the government provides migrant
+students with limited fundings, and less-supportive charging standards
+and subsidy policies, the academic performance gap between the two
+groups of students is likely to widen}.
 
 Beyond measuring educational disparities created by the complexity of
 fiscal decentralization and population management system, this research
@@ -353,14 +354,112 @@ disparities, see in studies by Baird
 
 \section{Literature Review}\label{literature-review}
 
-The imbalance of education finance provision increases the overall
-stress of providing equal education service to local-registered
-residents and migrant influx
-(\citeproc{ref-jinRegionalDecentralizationFiscal2005a}{Jin et al.,
-2005}). producing biased human capital investments in education system
-(\citeproc{ref-heckmanChinasHumanCapital2005}{Heckman, 2005})
+In this study, we define \emph{provision of education fundings} as a
+combination of three elements: (1) the amount of funding, including
+per-student funding, subsidies, and charging standards; (2) the
+proportion of funding, which is seperated into central/provincial and
+county/district level; and (3) the indicator of differentiation, which
+is whether migrant students enjoy the equal educational financial
+resources as locally-registered students in terms of funding, subsidies,
+and charging standards. Inspired by Knoeppel and Della Sala
+(\citeproc{ref-knoeppelEducationFundingStudent2015}{2015}), we consider
+that education funding, influenced by fiscal decentralization and
+\emph{Hukou} system, affects migrant and local students in the same
+schools through context for schooling, which results in unequal academic
+performances between two student groups.
 
-\section{Methods}\label{methods}
+\subsection{Education Funding and Academic
+Achievement}\label{education-funding-and-academic-achievement}
+
+Scholarship in education funding suggests that students of color have
+been continuously underfunded by federal and state, and the discrepancy
+between their and higher-SES/white counterparts' academic performance
+persists (\citeproc{ref-darling-hammond_2004_color}{Darling-Hammond,
+2004}; \citeproc{ref-gaddislauen_2014_school}{Gaddis \& Lauen, 2014};
+\citeproc{ref-lafortuneetal_2018_school}{Lafortune et al., 2018};
+\citeproc{ref-ryan_1999_schools}{Ryan, 1999}). In China, researchers
+found similar patterns and disparities among migrant students and
+local-\emph{Hukou} students. Evidence from China Education Paney survey
+indicates that local students outperform migrant students at higher
+quantile point, and increasing total education expenditure is likely
+shrink the academic achievement gap
+(\citeproc{ref-fangStudyOutcomeEquity2024}{Fang \& Zhang, 2024}).
+However, the association between other aspects of education expenditure
+(e.g.~per student funding, central and local government appropriation
+ratio) and local-migrant academic outcome equity requires further
+exploration, as most studies center on how funding expands spatial
+education inequity rather than disparities between different
+\emph{Hukou} statuses in cities
+(\citeproc{ref-weiAnalysisReportUrbanrural2022}{Wei et al., 2022}).
+
+\subsection{Fiscal Decentralization and Descriminatory Policies against
+Internal
+Migrants}\label{fiscal-decentralization-and-descriminatory-policies-against-internal-migrants}
+
+Beyond education finance disparities, education policies also differ for
+migrant and local students in many provinces, which means students
+without local registration (\emph{hukou}) may have no government
+subsidies or face different charging standards. Researchers refer this
+phenomenon as deflecting internal migrants' demands and using education
+to control urban population influx
+(\citeproc{ref-chanPhantomServicesDeflecting2019}{Chan \& O'Brien,
+2019}; \citeproc{ref-friedmanBiopoliticsUrbanizationChina2018}{Friedman,
+2018}). The disadvantage encountered by migran students varies in
+different city scenarios: if local education policy background is more
+\emph{Hukou}-based discriminatory, then migrant students are more likely
+to receive lower school performance than local students
+(\citeproc{ref-maMigrantStatusSchool2020}{Ma, 2020}). Deflecting
+education resources away from the underprivileged students occurs in
+U.S. schools to avoid losing fundings under school accountability, as
+the minority subgroups have a higher possibility to fall short of the
+average academic target
+(\citeproc{ref-hanushekraymond_2005_does}{Hanushek \& Raymond, 2005};
+\citeproc{ref-oday_2009_complexity}{O'Day, 2009}). Similarly, turning
+down education fundings for migrant students is also a strategy for
+Chinese local governments to decrease overall financial stress due to
+fiscal decentralization
+(\citeproc{ref-jinRegionalDecentralizationFiscal2005a}{Jin et al.,
+2005}; \citeproc{ref-longFiscalDecentralisationKnowledge2017}{Long et
+al., 2017}).
+
+As migrant students represent social minorities with limited or without
+\emph{Hukou}-related rights in urban spaces, exploring their education
+achievements influenced by government funding and financial supports can
+demonstrate the dynamic and diverse efficiency of providing public
+services, offering empirical evidence for the development of
+decentralization theory
+(\citeproc{ref-oatesSecondGenerationTheoryFiscal2005}{Oates, 2005},
+\citeproc{ref-oates_2008_evolution}{2008}).
+
+\section{Data and Methods}\label{data-and-methods}
+
+\subsection{Data}\label{data}
+
+In this project, we use the follow-up (2014-2015) dataset from the China
+Education Panel Survey
+\href{http://ceps.ruc.edu.cn/English/Home.htm}{CEPS}. CEPS is conducted
+by National Survey Research Center at Renmin University of China and it
+is the most used dataset in studies of Chinese internal migrant
+students. Data includes 1769 migrant students and 7960 non- migrant
+students who have valid information of migrant status in two phases of
+survey. We will merge datasets based on student, class, and school id,
+and remove values without valid information of hukou status.
+
+\subsection{Measures}\label{measures}
+
+The dependent variable in our study is the academic performance, which
+is measured by three indexes: score (percentage) of Chinese,
+Mathematics, and English exams. In {[}{]}, a primary investigation into
+the follow-up dataset suggests that the medium and average of all three
+test scores for migrant students are all less than the equivalents for
+non-migrant students. As for the independent variable, we take three
+aspects into account: the amount of per-student funding and subsidies;
+the proportion of funding sources, which is seperated into
+central/provincial level and county/district level; and whether migrant
+students enjoy the equal funding, subsidies, and charging standards as
+locally-registered students do.
+
+\subsection{Methods}\label{methods}
 
 \section{Analysis Results}\label{analysis-results}
 
@@ -377,15 +476,46 @@ Baird, K. E. (2008). Federal {Direct Expenditures} and {School Funding
 Disparities}, 1990-2000. \emph{Journal of Education Finance},
 \emph{33}(3), 297--310. \url{https://www.jstor.org/stable/40704331}
 
+\bibitem[\citeproctext]{ref-chanPhantomServicesDeflecting2019}
+Chan, A. T., \& O'Brien, K. J. (2019). Phantom {Services}: {Deflecting
+Migrant Workers} in {China}. \emph{The China Journal}, \emph{81},
+103--122. \url{https://doi.org/10.1086/699215}
+
 \bibitem[\citeproctext]{ref-chenAccessPublicSchools2013}
 Chen, Y., \& Feng, S. (2013). Access to public schools and the education
 of migrant children in {China}. \emph{China Economic Review}, \emph{26},
 75--88. \url{https://doi.org/10.1016/j.chieco.2013.04.007}
 
-\bibitem[\citeproctext]{ref-heckmanChinasHumanCapital2005}
-Heckman, J. J. (2005). China's human capital investment. \emph{China
-Economic Review}, \emph{16}(1), 50--70.
-\url{https://doi.org/10.1016/j.chieco.2004.06.012}
+\bibitem[\citeproctext]{ref-darling-hammond_2004_color}
+Darling-Hammond, L. (2004). {THE COLOR LINE IN AMERICAN EDUCATION}:
+{Race}, {Resources}, and {Student Achievement}. \emph{Du Bois Review:
+Social Science Research on Race}, \emph{1}(2), 213--246.
+\url{https://doi.org/10.1017/S1742058X0404202X}
+
+\bibitem[\citeproctext]{ref-fangStudyOutcomeEquity2024}
+Fang, C., \& Zhang, Y. (2024). {A Study on the Outcome Equity of
+Compulsory Education for Local and Migrant Children and the Financial
+Input and Expenditure of Family Education}. \emph{Basic Education
+Review}, \emph{368}(08), 3--17.
+\url{https://doi.org/10.3969/j.issn.1672-1128.2024.08.001}
+
+\bibitem[\citeproctext]{ref-friedmanBiopoliticsUrbanizationChina2018}
+Friedman, E. (2018). The {Biopolitics} of {Urbanization} in {China}:
+{Managing Migration} and {Access} to {Education}. In
+\emph{Developmentalist {Cities}? {Interrogating Urban Developmentalism}
+in {East Asia}} (pp. 68--90). Brill.
+\url{https://doi.org/10.1163/9789004383609_005}
+
+\bibitem[\citeproctext]{ref-gaddislauen_2014_school}
+Gaddis, S. M., \& Lauen, D. L. (2014). School accountability and the
+black--white test score gap. \emph{Social Science Research}, \emph{44},
+15--31. \url{https://doi.org/10.1016/j.ssresearch.2013.10.008}
+
+\bibitem[\citeproctext]{ref-hanushekraymond_2005_does}
+Hanushek, E. A., \& Raymond, M. E. (2005). Does school accountability
+lead to improved student performance? \emph{Journal of Policy Analysis
+and Management}, \emph{24}(2), 297--327.
+\url{https://doi.org/10.1002/pam.20091}
 
 \bibitem[\citeproctext]{ref-huangMythMigrantsProblems2017a}
 Huang, E. (2017). The myth of 'migrants as problems': {Public} school in
@@ -406,22 +536,70 @@ and fiscal incentives: {Federalism}, {Chinese} style. \emph{Journal of
 Public Economics}, \emph{89}(9-10), 1719--1742.
 \url{https://doi.org/10.1016/j.jpubeco.2004.11.008}
 
+\bibitem[\citeproctext]{ref-knoeppelEducationFundingStudent2015}
+Knoeppel, R. C., \& Della Sala, M. R. (2015). Education {Funding} and
+{Student Outcomes}: {A Conceptual Framework} for {Measurement} of the
+{Alignment} of {State Education Finance} and {Academic Accountability
+Policies}. \emph{Educational Considerations}, \emph{42}(2).
+\url{https://doi.org/10.4148/0146-9282.1050}
+
+\bibitem[\citeproctext]{ref-lafortuneetal_2018_school}
+Lafortune, J., Rothstein, J., \& Schanzenbach, D. W. (2018). School
+{Finance Reform} and the {Distribution} of {Student Achievement}.
+\emph{American Economic Journal: Applied Economics}, \emph{10}(2),
+1--26. \url{https://www.jstor.org/stable/26528381}
+
 \bibitem[\citeproctext]{ref-liDataAnalysisCurrent2018}
 Li, N. (2018). \emph{{Data analysis: Current situation, problems and
 countermeasures of the financial system of compulsory education for
 migrant children}}.
 https://www.thepaper.cn/newsDetail\_forward\_2673802.
 
+\bibitem[\citeproctext]{ref-longFiscalDecentralisationKnowledge2017}
+Long, Y., Nyland, C., \& Smyth, R. (2017). Fiscal {Decentralisation},
+the {Knowledge Economy} and {School Teachers}' {Wages} in {Urban China}.
+\emph{Journal of Development Studies}, \emph{53}(10), 1731--1747.
+
 \bibitem[\citeproctext]{ref-luVillagersCityResilience2023}
 Lu, S. (2023). '{Villagers} in the {City}': {Resilience} in migrant
 youth amidst urbanisation. \emph{British Journal of Social Work},
 \emph{53}(1), 236--257. \url{https://doi.org/10.1093/bjsw/bcac122}
+
+\bibitem[\citeproctext]{ref-maMigrantStatusSchool2020}
+Ma, G. (2020). Migrant status, school segregation, and students'
+academic achievement in urban {China}. \emph{Chinese Sociological
+Review}, \emph{52}(3), 319--336.
 
 \bibitem[\citeproctext]{ref-nationalbureauofstatisticsofchinaetal_2023_what}
 National Bureau of Statistics of China, UNICEF China, \& UNFPA China.
 (2023). \emph{What the 2020 {Census Can Tell Us About Children} in
 {China}: {Facts} and {Figures}}.
 https://www.unicef.cn/en/reports/population-status-children-china-2020-census.
+
+\bibitem[\citeproctext]{ref-oday_2009_complexity}
+O'Day, J. (2009). Complexity, {Accountability}, and {School
+Improvement}. \emph{Harvard Educational Review}, \emph{72}(3), 293--329.
+\url{https://doi.org/10.17763/haer.72.3.021q742t8182h238}
+
+\bibitem[\citeproctext]{ref-oatesSecondGenerationTheoryFiscal2005}
+Oates, W. E. (2005). Toward a {Second-Generation Theory} of {Fiscal
+Federalism}. \emph{International Tax \& Public Finance}, \emph{12}(4),
+349--373. \url{https://doi.org/10.1007/s10797-005-1619-9}
+
+\bibitem[\citeproctext]{ref-oates_2008_evolution}
+Oates, W. E. (2008). On {The Evolution} of {Fiscal Federalism}: {Theory}
+and {Institutions}. \emph{National Tax Journal}, \emph{61}(2), 313--334.
+\url{https://www.jstor.org/stable/41790447}
+
+\bibitem[\citeproctext]{ref-ryan_1999_schools}
+Ryan, J. E. (1999). Schools, {Race}, and {Money}. \emph{The Yale Law
+Journal}, \emph{109}(2), 249--316. \url{https://doi.org/10.2307/797490}
+
+\bibitem[\citeproctext]{ref-weiAnalysisReportUrbanrural2022}
+Wei, Y., Zhu, L., \& Ji, C. (2022). \emph{Analysis report on the
+urban-rural gap of the per-student expenditure level of compulsory
+education in {China}}. Institute of Chinese Educational Finance Science,
+Peking University.
 
 \end{CSLReferences}
 
